probando-GitHub-Pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Proyecto-2 CRUD</title>
 </head>
 <body>
-    
+    <h1>Esto es una prueba para ver si funciona git pages</h1>
 </body>
 </html>
