--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="/styles.css"> -->
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Proyecto-2 CRUD</title>
 </head>
-<body>
-    <h1>Esto es una prueba para ver si funciona git pages</h1>
+<body class="m-1 p-2">
+    <header class="container-fluid w-75 mt-3 my-3 p-2 text-center rounded-3 bg-success text-wrap">
+        <h1>Registro de alumnos</h1>
+    </header>
+        <section>
+            <div class="container-fluid w-75">
+                <div class="row justify-content-center d-flex align-items-center">
+                    <div class="col-9 bg-light p-2 border rounded-2">
+                        <form id="formulario">
+                            <input id="nombreAlumno" type="text" placeholder="Introduce el nombre del alumno" class="form-control">
+                        </form>
+                    </div>
+                    <div class="col-auto bg-light p-2 border rounded-2">
+                        <button type="button" class="btn btn-success">
+                        Agregar
+                        </button>
+                    </div>
+            </div>  
+        </section>
+
+        <div class="container-fluid mt-3 my-2 p-3 align-items-center text-center text-wrap border rounded-3 bg-light w-75">            
+            <h2>Lista de alumnos</h2>
+                <div id="listaAlumnos" class="mt-3">                        
+                    <div class="alert alert-primary" role="alert">
+                        <i class="fas fa-users float-left mr-2"></i>
+                        Nombre del alumno
+                    </div>
+                </div>
+        </div>
+        
+
+        <div>
+        
+        </div>
+
+    <script src="/scripts.js"></script>
 </body>
-</html>
