--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Proyecto-2 CRUD</title>
 </head>
 <body class="m-1 p-2">
-    <header class="container-fluid w-75 mt-3 my-3 p-2 text-center rounded-3 bg-success text-wrap">
+    <header class="container-fluid w-85 mt-3 my-3 p-2 text-center rounded-3 bg-success text-wrap">
         <h1>Registro de alumnos</h1>
     </header>
         <section>
-            <div class="container-fluid w-75">
+            <div class="container-fluid w-85">
                 <div class="row justify-content-center d-flex align-items-center">
                     <div class="col-9 bg-light p-2 border rounded-2">
                         <form id="formulario">
@@ -25,22 +25,26 @@
                         </form>
                     </div>
                     <div class="col-auto bg-light p-2 border rounded-2">
-                        <button type="button" class="btn btn-success">
-                        Agregar
+                        <button type="submit" class="btn btn-success">
+                        Guardar
                         </button>
                     </div>
             </div>  
         </section>
 
-        <div class="container-fluid mt-3 my-2 p-3 align-items-center text-center text-wrap border rounded-3 bg-light w-75">            
+        <div class="container-fluid mt-3 my-2 p-3 text-center text-wrap border rounded-3 bg-light w-85">         
             <h2>Lista de alumnos</h2>
-                <div id="listaAlumnos" class="mt-3">                        
-                    <div class="alert alert-primary" role="alert">
-                        <i class="fas fa-users float-left mr-2"></i>
-                        Nombre del alumno
+        </div>
+                <div id="listaAlumnos" class="mt-4 d-flex  flex-wrap">                        
+                    <div class="alert alert-primary w-75 justify-content-center" role="alert">
+                        <i class="fas fa-users me-1"></i>
+                        <b>Nombre del alumno</b>
+                        <span class="float-end"> 
+                            <i class="fas fa-user-edit ms-3"></i>
+                            <i class="fas fa-user-minus ms-3"></i>
+                        </span>
                     </div>
                 </div>
-        </div>
         
 
         <div>
