finished html structure

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <div class="container-fluid mt-3 my-2 p-3 text-center text-wrap border rounded-3 bg-light w-85">         
             <h2>Lista de alumnos</h2>
         </div>
-                <div id="listaAlumnos" class="mt-4 d-flex  flex-wrap">                        
-                    <div class="alert alert-primary w-75 justify-content-center" role="alert">
-                        <i class="fas fa-users me-1"></i>
+                <div id="listaAlumnos">                        
+                    <div class="alert alert-primary d-flex justify-content-evenly align-items-center flex-wrap" role="alert">
+                        <i class="fas fa-users me-3"></i>
                         <b>Nombre del alumno</b>
-                        <span class="float-end"> 
-                            <i class="fas fa-user-edit ms-3"></i>
-                            <i class="fas fa-user-minus ms-3"></i>
+                        <span class="d-flex"> 
+                            <i class="fas fa-user-edit me-3"></i>
+                            <i class="fas fa-user-minus me-1"></i>
                         </span>
                     </div>
                 </div>
