Creating the save function in the localStorage

--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
     </header>
         <section>
             <div class="container-fluid w-85">
-                <div class="row justify-content-center d-flex align-items-center">
+                <div class="d-flex justify-content-center text-center">
                     <div class="col-9 bg-light p-2 border rounded-2">
                         <form id="formulario">
-                            <input id="nombreAlumno" type="text" placeholder="Introduce el nombre del alumno" class="form-control">
+                            <input type="text" id="names" placeholder="Introduce el nombre del alumno" class="form-control">
+                            <button type="submit" class="btn btn-success mt-2 ">
+                                Guardar
+                            </button>
                         </form>
                     </div>
-                    <div class="col-auto bg-light p-2 border rounded-2">
-                        <button type="submit" class="btn btn-success">
-                        Guardar
-                        </button>
-                    </div>
-            </div>  
+                </div>  
         </section>
 
         <div class="container-fluid mt-3 my-2 p-3 text-center text-wrap border rounded-3 bg-light w-85">         
@@ -40,8 +38,8 @@
                         <i class="fas fa-users me-3"></i>
                         <b>Nombre del alumno</b>
                         <span class="d-flex"> 
-                            <i class="fas fa-user-edit me-3"></i>
-                            <i class="fas fa-user-minus me-1"></i>
+                            <i class="fas fa-user-edit me-4"></i>
+                            <i class="fas fa-user-minus me-0"></i>
                         </span>
                     </div>
                 </div>
