--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,47 +8,51 @@
     <!-- <link rel="stylesheet" href="/styles.css"> -->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"> -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Proyecto-2 CRUD</title>
 </head>
+
 <body class="m-1 p-2">
     <header class="container-fluid w-85 mt-3 my-3 p-2 text-center rounded-3 bg-success text-wrap">
         <h1>Registro de alumnos</h1>
     </header>
-        <section>
-            <div class="container-fluid w-85">
-                <div class="d-flex justify-content-center text-center">
-                    <div class="col-9 bg-light p-2 border rounded-2">
-                        <form id="formulario">
-                            <input type="text" id="names" placeholder="Introduce el nombre del alumno" class="form-control">
-                            <button type="submit" class="btn btn-success mt-2 ">
-                                Guardar
-                            </button>
-                        </form>
-                    </div>
-                </div>  
-        </section>
-
-        <div class="container-fluid mt-3 my-2 p-3 text-center text-wrap border rounded-3 bg-light w-85">         
-            <h2>Lista de alumnos</h2>
-        </div>
-                <div id="listaAlumnos">                        
-                    <div class="alert alert-primary d-flex justify-content-evenly align-items-center flex-wrap" role="alert">
-                        <i class="fas fa-users me-3"></i>
-                        <b>Nombre del alumno</b>
-                        <span class="d-flex"> 
-                            <i class="fas fa-user-edit me-4"></i>
-                            <i class="fas fa-user-minus me-0"></i>
-                        </span>
-                    </div>
+    <section>
+        <div class="container-fluid w-85">
+            <div class="d-flex justify-content-center text-center">
+                <div class="col-9 bg-light p-2 border rounded-2">
+                    <form id="formulario">
+                        <input type="text" id="names" placeholder="Introduce el nombre del alumno" class="form-control">
+                        <button type="submit" class="btn btn-success mt-2 ">
+                            Guardar
+                        </button>
+                    </form>
                 </div>
-        
+            </div>
+    </section>
 
-        <div>
-        
+    <div class="container-fluid mt-3 my-2 p-3 text-center text-wrap border rounded-3 bg-light w-85">
+        <h2>Lista de alumnos</h2>
+    </div>
+    <div id="listaAlumnos">
+        <div class="alert alert-primary d-flex justify-content-evenly align-items-center flex-wrap" role="alert">
+            <i class="fas fa-users me-3"></i>
+            <b>Nombre del alumno</b>
+            <span class="d-flex">
+                <i class="fas fa-user-edit me-4"></i>
+                <i class="fas fa-user-minus me-0"></i>
+            </span>
         </div>
+    </div>
 
+
+    <div>
+
+    </div>
     <script src="/scripts.js"></script>
 </body>
+
+</html>
