creating the delete function

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         <h2>Lista de alumnos</h2>
     </div>
     <div id="listaAlumnos">
-        <div class="alert alert-primary d-flex justify-content-evenly align-items-center flex-wrap" role="alert">
+        <div class="alert alert-primary d-flex justify-content-evenly align-items-center   flex-wrap" role="alert">
             <i class="fas fa-users me-3"></i>
             <b>Nombre del alumno</b>
             <span class="d-flex">
-                <i class="fas fa-user-edit me-4"></i>
-                <i class="fas fa-user-minus me-0"></i>
+                <i class="fas fa-user-edit me-4">edit</i>
+                <i class="fas fa-user-minus me-0">delete</i>
             </span>
         </div>
 
     </div>
-    <script src="/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
